bank-of-anthos/frontend-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
  namespace: bank-of-anthos
spec:
  hosts:
    - "*"
  gateways:
    - bank-of-anthos/asm-ingressgateway
  http:
    - route:
        - destination:
            host: frontend
            port:
              number: 80
